# PyReprism

./: .flake8  .gitignore  .readthedocs.yaml  CONTRIBUTING.md  README.md  dev-requirements.txt  pyproject.toml  pytest.ini  requirements.txt
.github/: FUNDING.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
PyReprism/langauges/: c.py  markup.py  perl.py  python.py  ruby.py
PyReprism/utils/: normalizer.py
docs/: Makefile  conf.py  extension.rst  index.rst  intro.rst  language.rst  normalizer.rst  reference.rst
src/PyReprism/langauges/: bash.py  c.py  markup.py  perl.py  php.py  python.py  ruby.py
src/PyReprism/languages/: __init__.py  _base.py  abap.py  actionscript.py  ada.py  apacheconf.py  apl.py  applescript.py  arduino.py  arff.py  asciidoc.py  asm6502.py  aspnet.py  autohotkey.py  autoit.py  bash.py  basic.py  batch.py  bison.py  brainfuck.py  bro.py  c.py  clike.py  clojure.py  coffeescript.py  cpp.py  crystal.py  csharp.py  csp.py  css.py  css_extras.py  d.py  dart.py  diff.py  django.py  docker.py  eiffel.py  elixir.py  erlang.py  fortran.py  (+51 more)
src/PyReprism/utils/: extension.py  extensions.py  file_extensions.py  normalizer.py
src/tests/languages/: test_abap.py  test_actionscript.py  test_c.py  test_cpp.py  test_django.py  test_html.py  test_java.py  test_python.py
src/tests/utils/: test_extensions.py  test_normalizer.py
tests/languages/: test_python.py
