[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "PyReprism"
version = "0.0.2"
authors = [
  { name= "UNLV EVOL LAB", email="ogenrwot@unlv.nevada.edu" },
]
license={file="LICENSE" }
python_requires = ">=3.5"
description = "Framework for Source Code Preprocessing"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Environment :: Console",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.hatch.build.targets.wheel]
packages = ["src/PyReprism"]

[tool.hatch.build]
exclude = [
  "docs",
  "tests",
  "venv"
]
[project.optional-dependencies]
dev = [
  "flake8",
  "pytest",
  "pytest-cov",
]

[project.urls]
Homepage = "https://github.com/unlv-evol/PyReprism"
Issues = "https://github.com/unlv-evol/PyReprism/issues"