[build-system]
requires = ["hatchling", "hatch_vcs"]
build-backend = "hatchling.build"

[project]
name = "PyReprism"
version = "0.0.4"
authors = [
  { name= "UNLV EVOL LAB", email="ogenrwot@unlv.nevada.edu" },
]

license={file="LICENSE" }
python_requires = ">=3.5"
description = "Framework for Source Code Preprocessing"
readme = "docs/intro.rst"
requires-python = ">=3.6"
classifiers = [
    "Environment :: Console",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.hatch.build.targets.wheel]
packages = ["src/PyReprism"]

[tool.hatch.build]
exclude = [
  "docs",
  "tests",
  "venv"
]
[project.optional-dependencies]
dev = [
  "flake8",
  "pytest",
  "pytest-cov",
]

[project.urls]
Homepage = "https://github.com/unlv-evol/PyReprism"
Documentation = "https://pyreprism.readthedocs.io"
Issues = "https://github.com/unlv-evol/PyReprism/issues"